--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 9000
   tomcat:
     max-threads: 800
     uri-encoding: UTF-8
@@ -15,19 +15,15 @@ spring:
       content-type: text/html
     enabled: true
     encoding: UTF-8
-    mode: HTML5
+    mode: HTML
   servlet:
     multipart:
       enabled: true
       max-file-size: 50MB
       max-request-size: 50MB
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 # Swagger json url address
 # etc. https://petstore.swagger.io/
 swagger.url: https://petstore.swagger.io/v2/swagger.json
-
-
-
-
-
-
-
